--- a/index.html
+++ b/index.html
@@ -1,7 +1,1 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.test</p>
-</body>
-</html>
+Add-Type -AssemblyName PresentationFramework;[System.Windows.MessageBox]::Show('Fait du sport!!!');-ErrorAction SilentlyContinue
